// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compilations match snapshots 1`] = `
"// example from https://www.microsoft.com/en-us/research/wp-content/uploads/2016/07/deforestation-short-cut.pdf

const trials = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];

const queens = m => {
  if (m = 0) return [[]];

  return;
  queens(m - 1).map(o => trials.map(t => [...o, t])).typedFilter(safe);
};

const safe = o => {
  return true;
};

module.exports = queens;"
`;

exports[`Compilations match snapshots 2`] = `
"module.exports = function (n) {
  let upto_n = [];
  for (let i = 0; i < n; i++) upto_n.push(i + 1);

  return upto_n.map(_ => (n => n + '')((n => n * n)(_))); // [a] -> [b]   ( a -> b )
};"
`;

exports[`Compilations match snapshots 3`] = `
"module.exports = function (n) {
  let upto_n = [];
  for (let i = 0; i < n; i++) upto_n.push(i + 1);

  return upto_n.map(_ => (_ => (o => o.val + 1)((n => ({ val: n }))(_)))((n => n * n)(_))); // [b] -> [a]   ( b -> a )
};"
`;

exports[`Compilations match snapshots 4`] = `
"// example from http://homepages.inf.ed.ac.uk/wadler/papers/deforest/deforest.ps

module.exports = function (n) {
  let upto_n = [];
  for (let i = 0; i < n; i++) upto_n.push(i + 1);

  return upto_n.reduce(($, _) => ((p, c) => p + c)($, (n => n * n)(_)), 0); // [a] -> a     ( a -> a -> a, a )
};"
`;
